# icfpc2015

./: .gitignore  Cargo.toml  Makefile  README.md  bench.py  best_submissions.py  get_score.py  hexplot.py
src/: board.rs  encoder.rs  formats.rs  game.rs  main.rs  scoring.rs  strategy.rs
